--- a/src/styles/uber/_uber-navbar.scss
+++ b/src/styles/uber/_uber-navbar.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 60px;
   position: fixed;
+  z-index: 100;
   background-color: $uberwhitebackground;
 
   .uber-navbar-contents {
@@ -96,12 +97,13 @@
   }
 
   .uber-ride-dropdown, .uber-drive-dropdown {
-    display: relative;
     width: 100%;
     height: 85px;
     box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 2px 0px;
     border-top: 1px solid $ubergreybackground;
     @include flexdisplay(row,center,center);
+    background-color: $uberwhitebackground;
+
 
     .uber-dropdown-contents {
       width: 81%;
@@ -116,7 +118,7 @@
           padding-left: 95px;
 
            p {
-             @include uberfont(16px, 400, 21px);
+             @include uberfont(16px, 300, 22px);
              margin-top: 3px;
            }
 
